--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
     "cypress": "^10.0.3",
-    "next": "^12.1.5",
+    "next": "^13.0.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
