--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "cypress": "^10.0.3",
     "next": "^13.0.7",
